# rag-lab-system

./: .env.development  .env.example  .env.production  .gitignore  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env  .env.test  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_failure_lab_schema.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py  lab.py
backend/app/core/: circuit_breaker.py  config.py  database.py  metrics.py  tracing.py
backend/app/models/: __init__.py  database.py  lab.py
backend/app/services/: __init__.py
backend/app/services/ingestion/: chunk_processor.py  document_processor.py  text_extractor.py
backend/app/services/lab/: __init__.py  catalog.py  mock_ai_client.py  repository.py  runner.py  status.py
backend/app/tasks/: __init__.py  lab.py
backend/scripts/: init.sql
backend/tests/: __init__.py  conftest.py  test_celery_imports.py  test_lab_api.py  test_lab_repository.py  test_mock_ai_client.py
backend/tests/core/: test_circuit_breaker.py
docs/superpowers/plans/: 2026-05-30-failure-laboratory.md
docs/superpowers/specs/: 2026-05-30-failure-laboratory-design.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  config.ts  index.css
mock_ai/: Dockerfile  main.py  pyproject.toml
monitoring/: prometheus.yml
monitoring/grafana/: dashboards.yml
monitoring/grafana/dashboards/: failure-lab-overview.json
monitoring/grafana/datasources/: prometheus.yml
