[project]
name = "rag-starter-kit-backend"
version = "0.1.0"
description = "Enterprise RAG Platform Backend - FastAPI application with vector search capabilities"
requires-python = ">=3.11,<3.12"
dependencies = [
    # FastAPI and server
    "fastapi>=0.136.3,<1.0.0",
    "uvicorn[standard]>=0.48.0,<1.0.0",
    "python-multipart>=0.0.29,<0.1.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]==1.7.4",
    # Database
    "sqlalchemy>=2.0.50,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "psycopg>=3.3.4,<4.0.0",
    "redis[hiredis]>=8.0.0,<9.0.0",
    "numpy>=2.4.6,<3.0.0",
    # Pydantic and validation
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    # Document processing
    "pypdf>=6.5.1,<7.0.0",
    "pdfplumber>=0.11.9,<0.12.0",
    "python-docx>=1.2.0,<2.0.0",
    "markdown>=3.10.2,<4.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "pypandoc>=1.17,<2.0",
    # Vector databases
    "pinecone-client>=6.0.0,<7.0.0",
    "weaviate-client>=4.21.2,<5.0.0",
    "chromadb>=1.5.9,<2.0.0",
    # Search and embeddings
    "langchain-text-splitters>=1.1.2,<2.0.0",
    "openai>=2.38.0,<3.0.0",
    "elasticsearch>=9.4.1,<10.0.0",
    "faiss-cpu>=1.14.2,<2.0.0",
    "rank-bm25==0.2.2",
    # Text processing
    "nltk>=3.9.4,<4.0.0",
    "spacy>=3.8.14,<4.0.0",
    "tiktoken>=0.13.0,<0.14.0",
    # Async and background tasks
    "celery>=5.6.3,<6.0.0",
    "aiofiles>=25.1.0,<26.0.0",
    "httpx>=0.28.1,<0.29.0",
    # Monitoring and observability
    "prometheus-client>=0.25.0,<0.26.0",
    "opentelemetry-api>=1.21.0,<2.0.0",
    "opentelemetry-sdk>=1.21.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0,<1.0.0",
    "structlog>=25.5.0,<26.0.0",
    # Rate limiting and caching
    "slowapi>=0.1.9,<0.2.0",
    "aiocache>=0.12.3,<0.13.0",
    # Circuit breaker and resilience
    "pybreaker>=1.4.1,<2.0.0",
    # Error tracking
    "sentry-sdk[fastapi]>=2.61.0,<3.0.0",
    # Utilities
    "python-dotenv>=1.2.2,<2.0.0",
    "click>=8.4.1,<9.0.0",
    "rich>=15.0.0,<16.0.0",
    "typer>=0.26.3,<0.27.0",
    "psutil>=7.2.2,<8.0.0",
    # Production server
    "gunicorn>=26.0.0,<27.0.0",
    "aiosqlite>=0.22.1,<0.23.0",
    "greenlet>=3.5.1,<4.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1,<2.0.0",
    "opentelemetry-exporter-prometheus>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "opentelemetry-semantic-conventions>=0.42b0",
    "opentelemetry-semantic-conventions-ai>=0.4.10",
    "sentence-transformers>=5.0.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",

    # Development tools
    "black>=26.5.1,<27.0.0",
    "isort>=8.0.1,<9.0.0",
    "flake8>=7.3.0,<8.0.0",
    "mypy>=2.1.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "external: Tests requiring external services",
]
asyncio_mode = "auto"
