[project]
name = "failure-lab-backend"
version = "0.1.0"
description = "FastAPI backend for a local failure laboratory"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.3,<1.0.0",
    "uvicorn[standard]>=0.48.0,<1.0.0",
    "sqlalchemy>=2.0.50,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "psycopg>=3.3.4,<4.0.0",
    "redis[hiredis]>=8.0.0,<9.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "celery>=5.6.3,<6.0.0",
    "httpx>=0.28.1,<0.29.0",
    "prometheus-client>=0.25.0,<0.26.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "psutil>=7.2.2,<8.0.0",
    "gunicorn>=26.0.0,<27.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "black>=26.5.1,<27.0.0",
    "isort>=8.0.1,<9.0.0",
    "flake8>=7.3.0,<8.0.0",
    "mypy>=2.1.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", ".mypy_cache", ".venv", "build", "dist", "__pycache__"]
