[project]
name = "failure-lab-mock-ai"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.3,<1.0.0",
    "uvicorn[standard]>=0.48.0,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "prometheus-client>=0.25.0,<0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
